unpackaged/main/default/objects/Partner_Relationship__c/Partner_Relationship__c.object-meta.xml
<CustomObject>
    <label>Partner Relationship</label>
    <nameField>
        <label>Partner Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>