unpackaged/main/default/objects/Partner_Relationship__c/fields/Active_Until_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Active_Until_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Until Cancelled?</label>
    <type>Checkbox</type>
</CustomField>