unpackaged/main/default/objects/Partner_Relationship__c/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
            </value>
            <value>
                <fullName>Not matched</fullName>
            </value>
            <value>
                <fullName>Parsed but not found</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>