unpackaged/main/default/objects/Partner_Relationship__c/fields/Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_URL__c</fullName>
    <label>Agreement URL</label>
    <type>Url</type>
</CustomField>