unpackaged/main/default/objects/Partner_Relationship__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Partner Relationships</relationshipLabel>
    <relationshipName>Partner_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>