unpackaged/main/default/objects/Partner_Relationship__c/fields/Country_Definition__c.field-meta.xml
<CustomField>
    <fullName>Country_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Definition</label>
    <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
    <relationshipLabel>Partner_Relationship__c (__cCountryLookup)</relationshipLabel>
    <relationshipName>FKCountryLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>