unpackaged/main/default/objects/Partner_Relationship__c/fields/Default_Hourly_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Hourly_Cost_Rate__c</fullName>
    <label>Default Hourly Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>