unpackaged/main/default/objects/Partner_Relationship__c/fields/Is_Triage_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Is_Triage_Fallback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Triage Fallback?</label>
    <type>Checkbox</type>
</CustomField>