unpackaged/main/default/objects/Partner_Relationship__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>