unpackaged/main/default/objects/Partner_Relationship__c/fields/Marketplace_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Name__c</fullName>
    <label>Marketplace Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Marketplace_Names</valueSetName>
    </valueSet>
</CustomField>