unpackaged/main/default/objects/Partner_Relationship__c/fields/Num_Partner_Leads__c.field-meta.xml
<CustomField>
    <fullName>Num_Partner_Leads__c</fullName>
    <label># Partner Leads</label>
    <summaryForeignKey>Partner_Lead__c.Partner_Relationship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>