unpackaged/main/default/objects/Partner_Relationship__c/fields/Partner_Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Roles__c</fullName>
    <label># Partner Contact Roles</label>
    <summaryForeignKey>Partner_Contact_Role__c.Partner_Relationship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>