unpackaged/main/default/objects/Partner_Relationship__c/fields/Partner_Is_Legal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Partner_Is_Legal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Is Legal Approved</label>
    <type>Checkbox</type>
</CustomField>