unpackaged/main/default/objects/Partner_Relationship__c/fields/Partner_Relationship_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Relationship ID (case safe)</label>
    <type>Text</type>
</CustomField>