unpackaged/main/default/objects/Partner_Relationship__c/fields/Partner_Relationship_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Relationship Record Type</label>
    <type>Text</type>
</CustomField>