unpackaged/main/default/objects/Partner_Relationship__c/fields/Postal_Code_Definition__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code Definition</label>
    <referenceTo>pw_ccpro__ZipCode__c</referenceTo>
    <relationshipLabel>Partner_Relationship__c (__cZipCodeLookup)</relationshipLabel>
    <relationshipName>FKZipCodeLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>