unpackaged/main/default/objects/Partner_Relationship__c/fields/Referral_Resubmit_Effective_Days__c.field-meta.xml
<CustomField>
    <fullName>Referral_Resubmit_Effective_Days__c</fullName>
    <label>Referral: Resubmit Effective Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>