unpackaged/main/default/objects/Partner_Relationship__c/fields/Reseller_Discount_Year_2_plus__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Discount_Year_2_plus__c</fullName>
    <label>Reseller Discount % (Year 2+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>