unpackaged/main/default/objects/Partner_Relationship__c/fields/Review_Message_Queue__c.field-meta.xml
<CustomField>
    <fullName>Review_Message_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Message Queue</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>Partner Relationships</relationshipLabel>
    <relationshipName>Partner_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>