unpackaged/main/default/objects/Partner_Relationship__c/fields/Send_Triage_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Triage_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Triage Notification?</label>
    <type>Checkbox</type>
</CustomField>