unpackaged/main/default/objects/Partner_Relationship__c/fields/Service_Countries__c.field-meta.xml
<CustomField>
    <fullName>Service_Countries__c</fullName>
    <label>Service Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>