unpackaged/main/default/objects/Partner_Relationship__c/fields/Service_Entities__c.field-meta.xml
<CustomField>
    <fullName>Service_Entities__c</fullName>
    <label>Service Entities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>