unpackaged/main/default/objects/Partner_Relationship__c/fields/Services_Description__c.field-meta.xml
<CustomField>
    <fullName>Services_Description__c</fullName>
    <label>Services Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>