unpackaged/main/default/objects/Partner_Relationship__c/fields/Services_Website__c.field-meta.xml
<CustomField>
    <fullName>Services_Website__c</fullName>
    <label>Services Website</label>
    <type>Url</type>
</CustomField>