unpackaged/main/default/objects/Partner_Relationship__c/fields/State_Definition__c.field-meta.xml
<CustomField>
    <fullName>State_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Definition</label>
    <referenceTo>pw_ccpro__State__c</referenceTo>
    <relationshipLabel>Partner_Relationship__c (__cStateLookup)</relationshipLabel>
    <relationshipName>FKStateLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>