unpackaged/main/default/objects/Partner_Relationship__c/fields/Street_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Line_1__c</fullName>
    <label>Street Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>