unpackaged/main/default/objects/Partner_Relationship__c/fields/Submission_Additional_Context__c.field-meta.xml
<CustomField>
    <fullName>Submission_Additional_Context__c</fullName>
    <label>Submission: Additional Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>