unpackaged/main/default/objects/Partner_Relationship__c/fields/Submission_Source_of_Partner__c.field-meta.xml
<CustomField>
    <fullName>Submission_Source_of_Partner__c</fullName>
    <label>Submission: Source of Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>