unpackaged/main/default/objects/Partner_Relationship__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>