unpackaged/main/default/objects/Partner_Relationship__c/recordTypes/CoSell.recordType-meta.xml
<RecordType>
    <fullName>CoSell</fullName>
    <active>true</active>
    <label>CoSell</label>
</RecordType>