unpackaged/main/default/objects/Partner_Relationship__c/recordTypes/Marketplace.recordType-meta.xml
<RecordType>
    <fullName>Marketplace</fullName>
    <active>true</active>
    <label>Marketplace</label>
</RecordType>