unpackaged/main/default/objects/Partner_Relationship__c/recordTypes/Referral.recordType-meta.xml
<RecordType>
    <fullName>Referral</fullName>
    <active>true</active>
    <label>Referral</label>
</RecordType>