unpackaged/main/default/objects/Partner_Relationship__c/validationRules/start_date_before_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_before_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>Agreement_Start_Date__c &gt;= Agreement_End_Date__c &amp;&amp; NOT(ISBLANK(Agreement_End_Date__c))</errorConditionFormula>
    <errorDisplayField>Agreement_Start_Date__c</errorDisplayField>
    <errorMessage>Relationship end date must be after relationship start date</errorMessage>
</ValidationRule>